2019-10-13  Bill Denney <wdenney@humanpredictions.com>

	* R/sha1.R: Add sha1.formula()
	* NAMESPACE: Idem
	* man/sha1.rd: Idem
	* inst/tinytest/test_sha1.R: Add tests for sha1.formula()

2019-10-12  Bill Denney <wdenney@humanpredictions.com>

	* R/sha1.R: Fix issue with num2hex() and input of Inf
	* inst/tinytest/test_sha1.R: Add Inf to the tests

2019-10-05  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* man/digest.Rd: Change three URL references to https
	* man/hmac.Rd: Ditto

	* R/utils.R: Move back functions used by digest() + makeVDigest()

	* R/AES.R: Added copyright header
	* R/digest.R: Idem
	* R/hmac.R: Idem
	* R/sha1.R: Idem
	* R/vdigest.R: Idem

2019-09-20  Matthew de Queljoe <matthew.dequeljoe@gmail.com>

	* R/digest.R: refactor digest function
	* R/vdigest.R: remove helper functions from file
	* R/utils.R: new file to hold helper functions

2019-09-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.21

2019-09-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* DESCRIPTION (Author): Add Matthew
	* README.md (Author): Ditto

	* demo/vectorised.R: Add demo (based on Matthew's PR)

	* R/vdigest.R: Added a handful of #nocov tags
	* man/vdigest.Rd: Break up two long lines

2019-09-17  Matthew de Queljoe <matthew.dequeljoe@gmail.com>

	* src/digest.c: Add vectorised digest function
	* R/vdigest.R: Add vectorised digest function factory
	* man/vdigest.Rd: Add documentation
	* NAMESPACE: Export new function getVDigest
	* inst/tinytest/test_digest.R: Add tests

2019-07-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.20

2019-06-29  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add installation and continues testing sections

	* .travis.yml (install): Use r-cran-tinytest from PPA

2019-06-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
